fixed overflow problem

--- a/css/index.scss
+++ b/css/index.scss
@@ -1,3 +1,7 @@
+body{
+    overflow: hidden;
+}
+
 section.backImage {
     min-height: 85vh;
     width: 100%;
